Fixing a footer issue on mobile
Fixing an issue where the footer doesn't stay at the bottom on mobile screens when there isn't enough content to fill the space.

--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ body{
     padding: 0;
     margin: 0;
     background-color: #FAE3E3;
+    min-height: 100vh;
 }
 
 a { 
